gccida/g1/mark_life
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_life/src/local-alloc.c:2807:29: error: must use 'enum' tag to refer to type 'machine_mode'
void  mark_life( int regno, machine_mode mode, int life) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_life/src/local-alloc.c:2825:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_life/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_life/src/obj/local-alloc.o] Error 1
